--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "aos": "^2.3.4",
+        "react-owl-carousel": "^2.3.3"
     }
 }
